fix spacing for im done button

--- a/src/styles/utilities/_spacing.scss
+++ b/src/styles/utilities/_spacing.scss
@@ -162,18 +162,18 @@
 }
 
 .u-padding-sides-lg {
-    padding-right: $unit*3;
-    padding-left: $unit*3;
+    padding-right: $unit*3 !important;
+    padding-left: $unit*3 !important;
 }
 
 .u-padding-sides-xlg {
-    padding-right: $v-space*2;
-    padding-left: $v-space*2;
+    padding-right: $v-space*2 !important;
+    padding-left: $v-space*2 !important;
 }
 
 .u-padding-sides-xxlg {
-    padding-right: $unit*5;
-    padding-left: $unit*5;
+    padding-right: $unit*5 !important;
+    padding-left: $unit*5 !important;
 }
 
 // Top
